Version 5.8 Update 8

- [NEW] Added support for external Unit Operations
- [NEW] Added the ability to load and use images as flowsheet object icons for Python Script UOs
- [FIX] Bug fixes