@@ -1,63 +1,66 @@
 ﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
 
-static class Module1
+namespace AddObjectsToDWSIM
 {
-
-    public static void Main()
+    class Program
     {
-
-        System.IO.Directory.SetCurrentDirectory("C:/Program Files/DWSIM5"); // replace with DWSIM's installation directory on your computer
-
-        //create automation manager
-        DWSIM.Automation.Automation interf = new DWSIM.Automation.Automation();
-
-        DWSIM.Interfaces.IFlowsheet sim;
-
-        //load Cavett's Problem simulation file
-        sim = interf.LoadFlowsheet("samples" + System.IO.Path.DirectorySeparatorChar + "Cavett's Problem.dwxml");
-
-        //use CAPE-OPEN interfaces to manipulate objects
-        CapeOpen.ICapeThermoMaterialObject feed, vap_out, liq_out;
-
-        feed = (CapeOpen.ICapeThermoMaterialObject)sim.GetFlowsheetSimulationObject("2");
-        vap_out = (CapeOpen.ICapeThermoMaterialObject)sim.GetFlowsheetSimulationObject("8");
-        liq_out = (CapeOpen.ICapeThermoMaterialObject)sim.GetFlowsheetSimulationObject("18");
-
-        //mass flow rate values in kg/s
-        double[] flows = new double[4];
-
-        flows[0] = 170.0;
-        flows[1] = 180.0;
-        flows[2] = 190.0;
-        flows[3] = 200.0;
-
-        //vapor and liquid flows
-        double vflow = 0;
-        double lflow = 0;
-
-        for (var i = 0; i <= flows.Length - 1; i++)
+        static void Main()
         {
-            //set feed mass flow
-            feed.SetProp("totalflow", "overall", null, "", "mass", new double[] { flows[i] });
-            //calculate the flowsheet (run the simulation)
-            Console.WriteLine("Running simulation with F = " + flows[i] + " kg/s, please wait...");
-            interf.CalculateFlowsheet(sim, null);
-            //check for errors during the last run
-            if (sim.Solved == false)
-            {
-                Console.WriteLine("Error solving flowsheet: " + sim.ErrorMessage);
-            }
-            //get vapor outlet mass flow value
-            vflow = ((double[])vap_out.GetProp("totalflow", "overall", null, "", "mass"))[0];
-            //get liquid outlet mass flow value
-            lflow = ((double[])liq_out.GetProp("totalflow", "overall", null, "", "mass"))[0];
-            //display results
-            Console.WriteLine("Simulation run #" + (i + 1) + " results:\nFeed: " + flows[i] + ", Vapor: " + vflow + ", Liquid: " + lflow + " kg/s\nMass balance error: " + (flows[i] - vflow - lflow) + " kg/s");
+            // replace with DWSIM's installation directory on your computer
+            System.IO.Directory.SetCurrentDirectory("C:/Program Files/DWSIM5");
+
+            //create automation manager
+            DWSIM.Automation.Automation interf = new DWSIM.Automation.Automation();
+
+            DWSIM.Interfaces.IFlowsheet sim;
+
+            //load *.dwxmz empty simulation file
+            string fileName = "simulation_template.dwxmz";
+
+            sim = interf.LoadFlowsheet(fileName);
+
+            var c1 = sim.AddObject(DWSIM.Interfaces.Enums.GraphicObjects.ObjectType.Cooler, 100, 100, "COOLER-001"); 
+            var e1 = sim.AddObject(DWSIM.Interfaces.Enums.GraphicObjects.ObjectType.EnergyStream, 130, 150, "HEAT_OUT");
+            var m1 = sim.AddObject(DWSIM.Interfaces.Enums.GraphicObjects.ObjectType.MaterialStream, 50, 100, "INLET");
+            var m2 = sim.AddObject(DWSIM.Interfaces.Enums.GraphicObjects.ObjectType.MaterialStream, 150, 100, "OUTLET");
+
+            // create the graphic object connectors manually as they are not being drawn on screen. 
+
+            ((dynamic)c1.GraphicObject).PositionConnectors();
+            ((dynamic)m1.GraphicObject).PositionConnectors();
+            ((dynamic)m2.GraphicObject).PositionConnectors();
+            ((dynamic)e1.GraphicObject).PositionConnectors();
+
+            // connect the graphic objects.
+
+            sim.ConnectObjects(m1.GraphicObject, c1.GraphicObject, 0, 0);
+            sim.ConnectObjects(c1.GraphicObject, m2.GraphicObject, 0, 0);
+            sim.ConnectObjects(c1.GraphicObject, e1.GraphicObject, 0, 0);
+
+            // create and add an instance of PR Property Package
+            
+            var pr = new DWSIM.Thermodynamics.PropertyPackages.PengRobinsonPropertyPackage();
+            pr.ComponentName = "Peng-Robinson (PR)";
+            pr.ComponentDescription = "Any Description"; // <-- important to set any text as description.
+
+            sim.AddPropertyPackage(pr);
+
+            m1.PropertyPackage = sim.PropertyPackages.Values.First();
+            m2.PropertyPackage = sim.PropertyPackages.Values.First();
+            c1.PropertyPackage = sim.PropertyPackages.Values.First();
+
+            // request a calculation
+
+            sim.RequestCalculation();
+
+            // save file as dwxmz (compressed XML)
+
+            string fileNameToSave = "created_file.dwxmz";
+            interf.SaveFlowsheet(sim, fileNameToSave, true);
         }
-
-        Console.WriteLine("Finished OK! Press any key to close.");
-        Console.ReadKey();
-
     }
-
 }
